# Silence

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
silence/: __init__.py  __main__.py  app.py
silence/core/: __init__.py  audio_pipeline.py  denoiser.py  vu_meter.py
silence/gui/: __init__.py  main_window.py  tray.py  vu_widget.py
silence/models/: .gitkeep
silence/utils/: __init__.py  config.py  logging_config.py  vbcable_check.py
