[project]
name = "silence"
version = "0.1.0"
description = "Silence — Open-source real-time AI noise suppression for Windows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Silence Contributors" }]
keywords = ["noise-suppression", "audio", "real-time", "ai", "deepfilternet"]
dependencies = [
    "deepfilternet>=0.5.6",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "PySide6>=6.7.0",
    "soundfile>=0.12.1",
    "psutil>=5.9.0",
]

[project.scripts]
silence = "silence.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchaudio = [{ index = "pytorch-cu121" }]
